--- a/kubernetes/production.vars.yaml
+++ b/kubernetes/production.vars.yaml
@@ -11,6 +11,10 @@ redirects:
       - hitpoint.tracon.fi
       - www.hitpoint.tracon.fi
 
+  - target: https://animecon.fi
+    hosts:
+      - www.animecon.fi
+
   - target: https://atlasso.tracon.fi/crowd?next=https://confluence.tracon.fi/display/HITPOINT2020
     hosts:
       - wiki.hitpoint.tracon.fi
@@ -70,7 +74,7 @@ redirects:
 
   - target: https://kompassi.eu
     hosts:
-      # - www.kompassi.eu
+      - www.kompassi.eu
       - kompassi.tracon.fi
 
   - target: https://kompassi.eu/profile/reservations
