--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,6 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
-      - uses: con2/emskaffolden-action
+      - uses: con2/emskaffolden-action@main
         with:
           args: deploy -E production -- -n redirects
