--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,9 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'      
       - uses: azure/setup-kubectl@v1
       - run: python3 -m pip install emskaffolden && emskaffolden -E production
       - run: kubectl apply -f kubernetes/template.compiled.yaml -n redirects
