--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'      
-      - uses: azure/setup-kubectl@v1
       - run: python3 -m pip install emskaffolden && emskaffolden -E production
-      - run: kubectl apply -f kubernetes/template.compiled.yaml -n redirects
+      - uses: Azure/k8s-deploy@v1.4
+        with:
+          namespace: redirects
+          manifests: |
+            kubernetes/template.compiled.yaml
+          kubectl-version: '1.20.4'
