--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'      
-      - uses: daisaru11/setup-cd-tools@v1
+      - uses: pairity/setup-cd-tools@30acb848f9ff747aff4810dac40c5cc0971f485d
         with:
           kubectl: '1.20.4'
           skaffold: '1.20.0'         
