--- a/kubernetes/production.vars.yaml
+++ b/kubernetes/production.vars.yaml
@@ -25,17 +25,17 @@ redirects:
     hosts:
       - wiki.hitpoint.tracon.fi
 
-  - target: https://atlasso.tracon.fi/crowd?next=https%3A%2F%2Fjira.tracon.fi%2Fsecure%2FCreateIssue.jspa%3Fpid%3D10302%26issuetype%3D10100
+  - target: https://jira.tracon.fi/secure/CreateIssue.jspa?pid=10302&issuetype=10100
     pass_path: false
     hosts:
       - kulukorvaus.ry.tracon.fi
 
-  - target: https://atlasso.tracon.fi/crowd?next=https%3A%2F%2Fjira.tracon.fi%2Fsecure%2FCreateIssue.jspa%3Fpid%3D11200%26issuetype%3D10100
+  - target: https://jira.tracon.fi/secure/CreateIssue.jspa?pid=11200&issuetype=10100
     pass_path: false
     hosts:
       - kulukorvaus.hitpoint.tracon.fi
 
-  - target: https://atlasso.tracon.fi/crowd?next=https%3A%2F%2Fjira.tracon.fi%2Fsecure%2FCreateIssue.jspa%3Fpid%3D11600%26issuetype%3D10100
+  - target: https://jira.tracon.fi/secure/CreateIssue.jspa?pid=11600&issuetype=10100
     pass_path: false
     hosts:
       - kulukorvaus.tracon.fi
