fix: cannot TLS for rallly.tracon.fi so wait

--- a/kubernetes/production.vars.yaml
+++ b/kubernetes/production.vars.yaml
@@ -109,6 +109,6 @@ redirects:
     hosts:
       - rally.con2.fi
       - doodle.con2.fi
-      - rallly.tracon.fi
-      - rally.tracon.fi
-      - doodle.tracon.fi
+      # - rallly.tracon.fi
+      # - rally.tracon.fi
+      # - doodle.tracon.fi
