--- a/kubernetes/production.vars.yaml
+++ b/kubernetes/production.vars.yaml
@@ -124,3 +124,8 @@ redirects:
     pass_path: false
     hosts:
       - repo.kompassi.eu
+
+  - target: https://ropekonsti.fi/program/list?programType=fleamarket'
+    pass_path: false
+    hosts:
+      - kirpputori.tracon.fi
